--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
 }
 
 .button-light {
-    @apply bg-sky-300 active:bg-sky-500 hover:bg-sky-200 text-slate-900;
+    @apply bg-indigo-200 active:bg-indigo-400 hover:bg-indigo-100 text-slate-900;
 }
 
 #homeHero {
