--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,11 @@
     @apply bg-indigo-200 active:bg-indigo-400 hover:bg-indigo-100 text-slate-900;
 }
 
+#nooraRepliesHero {
+    background-image: url('/img/page-bg/noora-replies.png');
+    box-shadow: inset 0 0 0 2000px #ffffff60;
+}
+
 #homeHero {
     background-image: url('/img/page-bg/home.png');
     box-shadow: inset 0 0 0 2000px #341b5031;
@@ -45,7 +50,7 @@ button {
 }
 
 input {
-    @apply placeholder-gray-400;
+    @apply placeholder-slate-400;
 }
 
 .formik-error {
