--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,15 @@
 #nooraRepliesHero {
     background-image: url('/img/page-bg/noora-replies.png');
     box-shadow: inset 0 0 0 2000px #ffffff60;
+    border-bottom-left-radius: 50% 20%;
+    border-bottom-right-radius: 50% 20%;
+}
+
+@media only screen and (max-width: 768px) {
+    #nooraRepliesHero {
+        border-bottom-left-radius: 50% 13%;
+        border-bottom-right-radius: 50% 13%;
+    }
 }
 
 #homeHero {
