--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@
 }
 
 #nooraRepliesHero {
+    background-color: #BEBFD5;
     background-image: url('/img/page-bg/noora-replies.png');
     box-shadow: inset 0 0 0 2000px #ffffff60;
     border-bottom-left-radius: 50% 20%;
