--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,12 +3,37 @@
 @tailwind components;
 @tailwind utilities;
 
-.button {
-    @apply rounded-full py-2 px-4 outline-none;
+/* PLAYGROUND */
+
+#chat {
+    height: 80vh;
+    max-height: 80vh;
+        overflow-y: scroll;
 }
 
-.button-light {
-    @apply bg-indigo-200 active:bg-indigo-400 hover:bg-indigo-100 text-slate-900;
+/* Scrollbar */
+#chat::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+#chat::-webkit-scrollbar-track {
+    background: #9e9ea0;
+}
+
+/* Handle */
+#chat::-webkit-scrollbar-thumb {
+    background: #d2d0d6;
+    transition: all 0.55s ease;
+}
+
+/* Handle on hover */
+#chat::-webkit-scrollbar-thumb:hover {
+    background: #dbd9df;
+}
+
+#messageBox {
+    width: calc(100% - 1rem);
 }
 
 #nooraRepliesHero {
@@ -24,6 +49,14 @@
         border-bottom-left-radius: 50% 13%;
         border-bottom-right-radius: 50% 13%;
     }
+}
+
+.button {
+    @apply rounded-full py-2 px-4 outline-none;
+}
+
+.button-light {
+    @apply bg-indigo-200 active:bg-indigo-400 hover:bg-indigo-100 text-slate-900;
 }
 
 #homeHero {
