--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,6 +97,58 @@ input {
     border-width: 1px;
 }
 
+.dot-flashing {
+    position: relative;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #969696;
+    color: #555555;
+    animation: dotFlashing 0.5s infinite linear alternate;
+    animation-delay: .25s;
+}
+
+.dot-flashing::before,
+.dot-flashing::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 0;
+}
+
+.dot-flashing::before {
+    left: -15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #969696;
+    color: #555555;
+    animation: dotFlashing 0.5s infinite alternate;
+    animation-delay: 0s;
+}
+
+.dot-flashing::after {
+    left: 15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #969696;
+    color: #555555;
+    animation: dotFlashing 0.5s infinite alternate;
+    animation-delay: 0.5s;
+}
+
+@keyframes dotFlashing {
+    0% {
+        background-color: #969696;
+    }
+
+    50%,
+    100% {
+        background-color: #e0e0e0;
+    }
+}
+
 /*-------------------------------*/
 
 html,
