--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,19 @@
     max-height: 55vh;
 }
 
+.gray-slider-thumb::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background: #bbb;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 100%;
+    transition: all 0.5s ease-out;
+}
+
+.gray-slider-thumb::-webkit-slider-thumb:hover {
+    background: #aaa;
+}
+
 /* Scrollbar */
 .pretty-scroll::-webkit-scrollbar {
     width: 8px;
