technical settings constraints

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,10 @@
     background: #aaa;
 }
 
+.gray-slider-thumb:disabled::-webkit-slider-thumb {
+    background: #d1d5db;
+}
+
 /* Scrollbar */
 .pretty-scroll::-webkit-scrollbar {
     width: 8px;
