--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,7 +53,7 @@
 
 #nooraRepliesHero {
     background-color: #BEBFD5;
-    background-image: url('/img/page-bg/noora-replies.png');
+    background-image: url('/img/page-bg/light.png');
     box-shadow: inset 0 0 0 2000px #ffffff60;
     border-bottom-left-radius: 50% 20%;
     border-bottom-right-radius: 50% 20%;
@@ -77,6 +77,11 @@
 #homeHero {
     background-image: url('/img/page-bg/home.png');
     box-shadow: inset 0 0 0 2000px #341b5031;
+}
+
+#modulesHero {
+    background-image: url('/img/page-bg/light.png');
+    box-shadow: inset 0 0 0 2000px #ffffff92;
 }
 
 @media only screen and (max-width: 768px) {
