--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -245,3 +245,12 @@ button.active.focus {
 ::-webkit-scrollbar-thumb:hover {
     background: #7447c9;
 }
+
+.special-underline {
+    @apply bg-gradient-to-r from-indigo-200 to-indigo-200
+      bg-no-repeat [background-position:0_88%]
+      [background-size:100%_0.2em]
+      /* motion-safe:transition-all motion-safe:duration-200
+      hover:[background-size:100%_100%]
+      focus:[background-size:100%_100%]; */
+}
