--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,7 +99,7 @@
 }
 
 .blue-link {
-    @apply text-noora-secondary-main hover:text-noora-secondary-main font-semibold;
+    @apply text-noora-secondary hover:text-noora-secondary font-semibold;
 }
 
 .container {
