--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,16 +51,16 @@
     background: #dbd9df;
 }
 
-#nooraRepliesHero {
+#askNooraHero {
     background-color: #BEBFD5;
     background-image: url('/img/page-bg/light.png');
-    box-shadow: inset 0 0 0 2000px #ffffff60;
+    box-shadow: inset 0 0 0 2000px #ffffff80;
     border-bottom-left-radius: 50% 20%;
     border-bottom-right-radius: 50% 20%;
 }
 
 @media only screen and (max-width: 768px) {
-    #nooraRepliesHero {
+    #askNooraHero {
         border-bottom-left-radius: 50% 13%;
         border-bottom-right-radius: 50% 13%;
     }
